# FIAP-Tech-Challenge-6IADT-Fase-3

./: .gitignore  CONFIGURATION.md  CONTRIBUTING.md  IMPROVEMENTS.md  NEXT_STEPS.md  README.md  README_OLD.md  initialize.py  main.py  pyproject.toml  pytest.ini
data/chroma_db/: chroma.sqlite3
docs/: espeficacao01.md
docs/data/knowledge_base/: get_human_performance.py
docs/knowledge_base/: CATALOG.md  README.md  get_human_performance.py
src/: config.py  main.py
src/domain/: __init__.py  guardrails.py  guardrails_check.py  state.py
src/infrastructure/: cache_store.py  llm_factory.py  resilience.py  vector_store.py
src/infrastructure/preprocess/: anonymizer.py  evaluation.py  get_human_performance.py  split_dataset.py
src/use_cases/: graph.py  nodes.py
src/utils/: __init__.py  logging.py  translation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_rag_pipeline.py
tests/unit/: test_nodes.py
