[project]
name = "Assistente-Medico-RAG"
version = "0.1.0"
description = "Assistente Médico RAG"
readme = "README.md"
requires-python = ">=3.10" # Ajustado para compatibilidade geral
dependencies = [
    "faiss-cpu>=1.7.4", # Ajuste de versão comum
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.10", # LangGraph evolui rápido, verifique a versão
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "langchain-chroma>=0.1.0",
    "unstructured>=0.10.0", # <--- ADICIONADO
    "networkx>=3.0",        # Geralmente necessário para unstructured/langchain
    "scikit-learn>=1.3.0",  # Para avaliação de modelos e métricas
]