[project]
name = "Assistente-Medico-RAG"
version = "0.1.0"
description = "Assistente Médico RAG"
readme = "README.md"
requires-python = ">=3.10" # Ajustado para compatibilidade geral
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.10",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "langchain-chroma>=0.1.0",
    "unstructured>=0.10.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "tenacity>=8.2.0",        # Retry com backoff exponencial
    "pybreaker>=1.4.0",       # Circuit breaker pattern
    "pytest>=7.4.0",          # Testes unitários
    "pytest-cov>=4.1.0",      # Cobertura de testes
    "pytest-mock>=3.11.0",    # Mocks para testes
]